--- a/src/assets/themes/dark-mode.scss
+++ b/src/assets/themes/dark-mode.scss
@@ -12,4 +12,5 @@
   --bg-navbar-color: #181818;
   --bg-icon-color: rgba(74, 144, 226, 0.2);
   --text-gray-color: white;
+  --sidebar-color: white;
 }
