--- a/src/assets/themes/light-mode.scss
+++ b/src/assets/themes/light-mode.scss
@@ -22,4 +22,5 @@
   --danger-bg: #e74c3c;
   --card-border-color: #e5e5e5;
   --text-gray-color: #b0b0b0;
+  --sidebar-color: white;
 }
